@@ -1,5 +1,6 @@
 5.1.0~beta (2015-03-22)
 ADD: Korean (thx 2 piodio)
+FIX: show seconds (runtime) in Gotham
 
 5.0.9 (2015-03-14)
 ADD: 'duration' optimized for KODI 15.X (Isengard)
